--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'com.android.application'
+plugins {
+    alias(libs.plugins.android.application)
+}
 
 android {
     namespace 'com.genymobile.scrcpy'
@@ -24,7 +26,7 @@ android {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation libs.junit
 }
 
 apply from: "$project.rootDir/config/android-checkstyle.gradle"
