--- a/settings.gradle
+++ b/settings.gradle
@@ -16,8 +16,12 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://jitpack.io"
+        }
     }
 }
 
 include ':server'
-include ':gui'
+include ':client'
+include ':jadb'
